--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/manohar-aashish/react-boiler/issues"
   },
-  "homepage": "https://github.com/manohar-aashish/react-boiler#readme"
+  "homepage": "https://github.com/manohar-aashish/react-boiler#readme",
+  "dependencies": {
+    "@babel/cli": "^7.14.5",
+    "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.7",
+    "@babel/preset-react": "^7.14.5"
+  }
 }
