--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-react": "^7.14.5"
+  },
+  "devDependencies": {
+    "prettier": "^2.3.2"
   }
 }
