--- a/package.json
+++ b/package.json
@@ -4,6 +4,12 @@
   "description": "This is a react boiler and can be used as a template for react projects",
   "main": "index.js",
   "scripts": {
+    "clean": "rm-rf ./build",
+    "prebuild": "npm install --only-prod",
+    "build": "webpack --config webpack/webpack.config.js --env env=prod",
+    "dev": "webpack serve --config webpack/webpack.config.js --env env=dev --port 3000 --profile --progress",
+    "format": "prettier --write \"./**/*.{js,jsx,css,scss,json}\"",
+    "lint": "eslint --fix \"./**/*.{js,jsx,json}\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -36,6 +42,7 @@
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.3.2",
+    "react-refresh": "^0.10.0",
     "webpack-dev-server": "^3.11.2"
   }
 }
